--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "monolog/monolog": "1.25.1",
-      "ext-calendar": "*"
+      "ext-calendar": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
