--- a/App/Resources/config.json
+++ b/App/Resources/config.json
@@ -1,15 +1,1 @@
-{
-  "environment": "production",
-  "database": {
-    "host": "mysql",
-    "port": 3306,
-    "username": "divido",
-    "password": "divido"
-  },
-  "cache": {
-    "redis": {
-      "host": "redis",
-      "port": 6379
-    }
-  }
-}
+{"environment":"production","database":{"host":"mysql","port":3306,"username":"divido","password":"divido"},"cache":{"redis":{"host":"redis","port":6379}}}
